# tx2_issue

./: CMakeLists.txt  README.md  README.md~
src/: cuda_exception.cuh  device_image.cuh  main.cu  pixel_cost.cuh
src/sgm/: sgm.cu  sgm.cuh
src/wta/: wta.cu  wta.cuh
